--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -71,6 +71,51 @@
   author = {Nikita Kozodoi and Tibor {V. Varga}},
   year = {2021},
   note = {R package version 1.2.2},
-  url = {https://CRAN.R-project.org/package=fairness},
+  url = {https://CRAN.R-project.org/package=fairness}
+}
+@inproceedings{calders_2010,
+  title={Three naive Bayes approaches for discrimination-free classification},
+  author={Calders, Toon and Verwer, Sicco},
+  booktitle={Data Mining and Knowledge Discovery},
+  year={2010},
+  publisher={Springer Science and Business Media LLC},
+  doi={10.1007/s10618-010-0190-x}
+}
+@inproceedings{chouldechova_2017,
+  title={Fair Prediction with Disparate Impact: A Study of Bias in Recidivism Prediction Instruments},
+  author={Chouldechova, Alexandra},
+  booktitle={Big Data},
+  year={2017},
+  publisher={Mary Ann Liebert Inc.},
+  doi={10.1089/big.2016.0047}
+}
+@inproceedings{feldman_2015,
+  title={Certifying and Removing Disparate Impact},
+  author={Feldman, Michael and Friedler, Sorelle A. and Moeller, Jeremy and Scheidegger, Carlos and Venkatasubramanian, Suresh},
+  booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year={2015},
+  doi={10.1145/2783258.2783311},
+}
+@book{fisher_1970,
+  title={Statistical Methods for Research Workers},
+  author={Fisher, Ronald A.},
+  year={1970},
+  publisher={Oliver \& Boyd}
+}
+@article{jamil_2017,
+  title={Default "Gunel and Dickey" Bayes factors for contingency tables},
+  author={Jamil, Tahira and Ly, Alexander and Morey, Richard D. and Love, Jon and Marsman, Maarten and Wagenmakers, Eric-Jan},
+  journal={Behavior Research Methods},
+  volume={49},
+  pages={638--652},
+  year={2017},
+  doi={10.3758/s13428-016-0739-8}
+}
+@inproceedings{zafar_2017,
+  title={Fairness Beyond Disparate Treatment \& Disparate Impact},
+  author={Zafar, Muhammad Bilal and Valera, Isabel and Gomez Rodriguez, Manuel and Gummadi, Krishna P.},
+  booktitle={Proceedings of the 26th International Conference on World Wide Web},
+  year={2017},
+  doi={10.1145/3038912.3052660}
 }
 
