--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -6,6 +6,8 @@ output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+bibliography: references.bib
+csl: apa.csl
 vignette: >
   %\VignetteIndexEntry{Get started with the jfa package}
   %\VignetteEngine{knitr::rmarkdown}
