--- a/vignettes/sampling-workflow.Rmd
+++ b/vignettes/sampling-workflow.Rmd
@@ -6,6 +6,8 @@ output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+bibliography: references.bib
+csl: apa.csl
 vignette: >
   %\VignetteIndexEntry{Classical sampling workflow}
   %\VignetteEngine{knitr::rmarkdown}
@@ -38,7 +40,7 @@ financial statements are large enough that they might influence the decision of
 stakeholders relying on these financial statements. The performance materiality
 is the materiality that applies to each of the populations on which the
 financial statements are based. For this example, the performance materiality is
-set at 5% of the total value of the population.
+set at 5 percent of the total value of the population.
 
 In this example, we focus on the `BuildIt` data set that comes with the **jfa**
 package.
@@ -66,14 +68,15 @@ the misstatement in the population.
 
 ## Setting up the audit
 
-The auditor wants to make a statement that, with 95% confidence, the misstatement
-in the population is lower than the performance materiality of 5%. Based on last
-year's audit at BuildIt, where the upper bound of the misstatement turned out to
-be 2.5%, they want to tolerate at most 2.5% errors in the intended sample. The
-auditor can therefore re-formulate their statistical statement as that they want
-to conclude that, when 2.5% errors are found in the sample, they can conclude
-with 95% confidence that the misstatement in the population is lower than the
-performance materiality of 5%.
+The auditor wants to make a statement that, with 95 percent confidence, the
+misstatement in the population is lower than the performance materiality of 5
+percent. Based on last year's audit at BuildIt, where the upper bound of the
+misstatement turned out to be 2.5 percent, they want to tolerate at most 2.5
+percent errors in the intended sample. The auditor can therefore re-formulate
+their statistical statement as that they want to conclude that, when 2.5 percent
+errors are found in the sample, they can conclude with 95 percent confidence
+that the misstatement in the population is lower than the performance
+materiality of 5 percent.
 
 Below, the auditor defines the performance materiality, confidence level, and
 expected misstatements in the sample.
@@ -138,8 +141,8 @@ stage1 <- planning(materiality = materiality, expected = expected, conf.level = 
 The auditor can then inspect the result from the planning procedure by using the
 `summary()` function. The result shows that the auditor needs to select a sample
 of 178 items so that, when at most 4.45 misstatements are found, they can
-conclude with 91.66% confidence that the misstatement in BuildIt's population
-is lower than the performance materiality of 5%. 
+conclude with 91.66 percent confidence that the misstatement in BuildIt's
+population is lower than the performance materiality of 5 percent.
 
 ```{r}
 summary(stage1)
@@ -191,7 +194,7 @@ sample <- stage2$sample
 
 Next, the auditor can execute the audit by annotating the items in the sample
 with their audit values (for exampling by writing the sample to a *.csv* file
-using `write.csv()`. They can then load the annotated sample back into the R
+using `write.csv()`). They can then load the annotated sample back into the R
 session for further evaluation. For this example, the audit values of the sample
 items are already included in the `auditValue` column of the data set.
 
@@ -219,8 +222,8 @@ stage4 <- evaluation(
 ```
 
 The auditor can inspect the outcomes of her inference by using the `summary()`
-function. The resulting 91.66% upper bound is 1.396%, which is lower than the
-performance materiality of 5%.
+function. The resulting 91.66 percent upper bound is 1.396 percent, which is
+lower than the performance materiality of 5 percent.
 
 ```{r}
 summary(stage4)
@@ -228,11 +231,11 @@ summary(stage4)
 
 ## Conclusion
 
-Since the 91.66% upper confidence bound on the misstatement in population is
-lower than the performance materiality, the auditor has obtained sufficient
-evidence to conclude that the population does not contain material
-misstatements. The auditor can create a `html` or `pdf` report of the statistical
-results using the `report()` function, as shown below.
+Since the 91.66 percent upper confidence bound on the misstatement in population
+is lower than the performance materiality, the auditor has obtained sufficient
+evidence to conclude that the population does not contain material misstatement.
+The auditor can create a `html` or `pdf` report of the statistical results using
+the `report()` function, as shown below.
 
 ```{r, eval = FALSE}
 report(stage4, file = "report.html")
